# Camera_Recorder

./: CMakeLists.txt  README.md  cam_reader.cpp  cam_reader.h  main.cpp
